--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small bg-secondary pt-4">
+<footer class="page-footer font-small bg-dark pt-4">
 
     <div class="container">
         <div class="row">
@@ -33,8 +33,8 @@
         </div>
     </div>
 
-    <div class="footer-copyright bg-dark text-center py-3">
-        <span class="text-light">Made with ❤ by Vinicius Bersano</span>
+    <div class="footer-copyright bg-gr text-center py-3">
+        <span class="text-dark">Made with ❤ by Vinicius Bersano</span>
 
     </div>
 
