--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
                     <hr class="mt-5 mb-5">
 
                     <p class="text-center text-light text-md">
-                        Don't have an account? <a href="">Sign-Up</a> 
+                        Don't have an account? <a routerLink="/register">Sign-Up</a> 
                     </p>
 
                 </div>
