--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -49,14 +49,12 @@
                     </div>
 
                     <div class="d-flex justify-content-center pt-4">
-                        <button type="submit" class="btn btn-outline-danger me-4">Cancel</button>
                         <button type="submit" class="btn btn-outline-success">Register</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
 
-                    <p class="text-center text-light text-md">
-                        Alredy have an account? <a href="">Sign-In</a>
+                    <p class="text-center text-light text-md">Alredy have an account? <a routerLink="/login">Sign-In</a>
                     </p>
 
                 </div>
