--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,17 +9,17 @@
                     <h1 class="text-center text-light">Login</h1>
 
                     <div class="form-group">
-                        <label for="user">User</label>
+                        <label [(ngModel)]='userLogin.usuario' for="user">User</label>
                         <input class="form-control" type="text" name="user" id="user" placeholder="E-mail adress">
                     </div>
 
                     <div class="form-group">
-                        <label for="password">Password</label>
+                        <label [(ngModel)]='userLogin.senha' for="password">Password</label>
                         <input class="form-control" type="password" name="password" id="password" placeholder="password">
                     </div>
 
                     <div class="d-flex justify-content-center pt-4">
-                        <button type="submit" class="btn btn-outline-light">Sign In</button>
+                        <button type="submit" class="btn btn-outline-light" (click)='entrar()'>Sign In</button>
                     </div>
 
                     <hr class="mt-5 mb-5">
