--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,39 +1,56 @@
-<div class="container-fluid bg-dark">
+<div class="container-fluid p-5 bg-gr">
 
-    <div class="row d-flex align-items-center">
-        <div class="col-md-4">
+    <div class="container-fluid bg-dark" style="border-radius: 20px">
 
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-8">
+        <div class="row d-flex align-items-center">
+            <div class="col-md-5">
 
-                    <h1 class="text-center text-light">Login</h1>
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-8">
 
-                    <div class="form-group">
-                        <label [(ngModel)]='userLogin.usuario' for="user">User</label>
-                        <input class="form-control" type="text" name="user" id="user" placeholder="E-mail adress">
+                        <h1 class="text-center text-light">Login</h1>
+
+                        <div class="form-group">
+                            <label for="user">User</label>
+                            <input [(ngModel)]='userLogin.usuario' class="form-control" type="text" name="user"
+                                id="user" placeholder="E-mail adress">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="password"
+                                id="password" placeholder="password">
+                        </div>
+
+                        <div class="d-flex justify-content-center pt-4">
+                            <button type="submit" class="btn btn-outline-success" (click)='entrar()'>Sign In</button>
+                        </div>
+
+                        <hr class="mt-5 mb-5">
+
+                        <p class="text-center text-light text-md">
+                            Don't have an account? <a routerLink="/register">Sign-Up</a>
+                        </p>
+
                     </div>
-
-                    <div class="form-group">
-                        <label [(ngModel)]='userLogin.senha' for="password">Password</label>
-                        <input class="form-control" type="password" name="password" id="password" placeholder="password">
-                    </div>
-
-                    <div class="d-flex justify-content-center pt-4">
-                        <button type="submit" class="btn btn-outline-light" (click)='entrar()'>Sign In</button>
-                    </div>
-
-                    <hr class="mt-5 mb-5">
-
-                    <p class="text-center text-light text-md">
-                        Don't have an account? <a routerLink="/register">Sign-Up</a> 
-                    </p>
-
                 </div>
+
+            </div>
+
+            <div class="col-md-7 d-flex justify-content-center align-items-center" id="img-bg"
+                style="border-end-end-radius: 20px; border-start-end-radius: 20px">
+
+                <div class="card p-3" style="width: 15rem; height: max-content; border-radius: 10px;">
+                    <div class="card-body p-0 d-flex justify-content-center">
+                        <img style="height: 200px;" src="https://i.imgur.com/KqBPm1s.png" alt="">
+                    </div>
+                    <h3 class="text-center text-light">blog pessoal.</h3>
+                    <h6 class="text-center text-light">made by: vbersano!</h6>
+                </div>
+
             </div>
 
         </div>
-
-        <div class="col-md-8" id="img-bg"></div>
 
     </div>
 
