--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,11 +1,24 @@
 #img-bg {
-    background-image: url('https://i.imgur.com/3py44Nc.png');
+    background-image: url('https://i.imgur.com/Bo9zlPE.jpg');
 
-    min-height: 650px;
+    min-height: 300px;
 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.bg-gr {
+    background-image: linear-gradient(180deg, #e6ff99 0, #ceff9b 16.67%, #b5ff9d 33.33%, #9df29d 50%, #86e49d 66.67%, #72d89d 83.33%, #60ce9e 100%);
+
+}
+
+.card {
+    backdrop-filter: blur(4px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(17, 25, 40, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 hr{
@@ -16,3 +29,4 @@ div.form-group{
     margin-top: 12px;
     font-weight: 600;
 }
+
