componente inicio sem consumo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<app-menu *ngIf="auth.logado()"></app-menu>
+
 <!--dinamic routing-->
 <router-outlet></router-outlet>
+
+<app-footer *ngIf="auth.logado()"></app-footer>
