--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
-                <h4 class="text-white">Follow me on Social Media!</h4>
+                <h4 class="text-white">Keep Up with Us!</h4>
             </div>
         </div>
     </div>
@@ -33,8 +33,8 @@
         </div>
     </div>
 
-    <div class="footer-copyright bg-gr text-center py-3">
-        <span class="text-dark">Made with ❤ by Vinicius Bersano</span>
+    <div class="footer-copyright bg-dark text-center py-2">
+        <span class="text-light">Made with ❤ by Vinicius Bersano Oliveira</span>
 
     </div>
 
