--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -45,7 +45,7 @@
                         <img style="height: 200px;" src="https://i.imgur.com/KqBPm1s.png" alt="">
                     </div>
                     <h3 class="text-center text-light">blog pessoal.</h3>
-                    <h6 class="text-center text-light">made by: vbersano!</h6>
+                    <h6 class="text-center text-light">made by: <a href="https://github.com/vbersano" target="_blank">vbersano</a></h6>
                 </div>
 
             </div>
