--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,11 +8,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
                 <li class="nav-item">
-                    <img src="https://i.imgur.com/NM4O6E7.jpg" alt="user pfp" width="50px" height="50px"
+                    <img src="{{foto}}" alt="user pfp" width="50px" height="50px"
                         class="img-fluid rounded-circle">
                 </li>
                 <li class="nav-item ps-3">
-                    <p class="m-0 font-weight-bold text-white fs-16">Username</p>
+                    <p class="m-0 font-weight-bold text-white fs-16">{{nome}}</p>
                 </li>
 
                 <li class="nav-item ps-2 pt-3">
@@ -26,7 +26,7 @@
 
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0 d-flex align-items-center">
                 <li class="nav-item ps-3">
-                    <a class="m-0 font-weight-bold text-white fs-16">Exit <i class="fa fa-sign-out" aria-hidden="true"></i>
+                    <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16">Exit <i class="fa fa-sign-out" aria-hidden="true"></i>
                     </a>
                 </li>
             </ul>
