--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,10 +9,10 @@
 
                 <div class="card p-3" style="width: 15rem; height: max-content; border-radius: 10px;">
                     <div class="card-body p-0 d-flex justify-content-center">
-                        <img style="height: 200px;" src="https://i.imgur.com/KqBPm1s.png" alt="">
+                        <img style="height: 200px;" src="https://i.imgur.com/AkqQAEz.png" alt="">
                     </div>
                     <h3 class="text-center text-light">blog pessoal.</h3>
-                    <h6 class="text-center text-light">made by: vbersano!</h6>
+                    <h6 class="text-center text-light">made by: <a href="https://github.com/vbersano" target="_blank">vbersano</a></h6>
                 </div>
 
             </div>
