--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -86,7 +86,7 @@
             </div>
 
             <div class="form-group pt-2">
-                <label for="tema">Choose a Tag, or <a href="">Create a new one</a>: </label>
+                <label for="tema">Choose a Tag, or <a data-bs-dismiss="modal" routerLink='/tema'>Create a new one</a>: </label>
                 <select class="form-control" name="tema" id="tema">
                     <option value="">Temas</option>
                 </select>
