componente tema requisições get e post

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="footer-copyright bg-dark text-center py-2">
+    <div class="footer-copyright bg-darker text-center py-2">
         <span class="text-light">Made with ❤ by Vinicius Bersano Oliveira</span>
 
     </div>
