--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -8,7 +8,7 @@
 
     <div class="card p-3" style="border-radius: 20px; width: 120vh;">
         <h1 class="fs-54 text-center">Tags</h1>
-        <h5 class="fs-18 text-center pt-3">Check all the avaliable Tags, or register a new one</h5>
+        <h5 class="fs-18 text-center mt-3">Check all the avaliable Tags, or register a new one</h5>
 
         <div class="row d-flex justify-content-center">
             <div class="col-md-5">
@@ -40,7 +40,7 @@
             <div class="row mt-3 pb-5 d-flex justify-content-center bg-dark">
                 <div class="col-md-6">
 
-                    <table class="table table-hover table-dark p-0">
+                    <table class="table table-hover table-dark p-0 mt-3">
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -53,8 +53,8 @@
                                 <th>{{tema.id}}</th>
                                 <td>{{tema.descricao}}</td>
                                 <td class="d-flex justify-content-end">
-                                    <button class="btn btn-light me-3">Edit</button>
-                                    <button class="btn btn-outline-danger">Delete</button>
+                                    <button class="btn btn-light me-3" [routerLink]="['/tema-edit', tema.id]">Edit</button>
+                                    <button class="btn btn-outline-danger" [routerLink]="['/tema-delete', tema.id]">Delete</button>
                                 </td>
                             </tr>
                         </tbody>
