--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,5 +1,5 @@
 #img-bg {
-    background-image: url('https://i.imgur.com/Bo9zlPE.jpg');
+    background-image: url('https://i.imgur.com/oTzMPC8.jpg');
 
     min-height: 0px;
 
